# susume

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: basic.rs  bytes.rs  many.rs  spinner.rs  unbounded.rs
src/: estimator.rs  lib.rs  progress_bar.rs  render.rs  state.rs  style.rs  target.rs  template.rs  ticker.rs
src/format/: byte_size.rs  duration.rs  mod.rs  parser.rs
src/tests/: mod.rs  test_bar_render.rs  test_concurrency.rs  test_duration_formatter.rs  test_estimator.rs  test_format.rs  test_hierarchy.rs  test_misc.rs  test_parser.rs  test_render_templates.rs
